Fixed MyGames page title alignment

--- a/css/my-games-styles.css
+++ b/css/my-games-styles.css
@@ -19,9 +19,11 @@
 	background-color: #0b3c5d;
 	font-size:10vw;
 	/*padding:0;*/
+	text-align:center;
 }
 .jumbotron-container {
 	/*height:10%;*/
+	width:100%;
 }
 .pgn-box {
 	display:flex;
